Fix spacing issue

--- a/web/themes/custom/glazed_subtheme/css/rocket.css
+++ b/web/themes/custom/glazed_subtheme/css/rocket.css
@@ -1998,7 +1998,9 @@ body.page-node-type-product {
 #rocket .view-display-id-categories,
 #rocket .view-display-id-categories_innovation {
     margin-top: 2.5rem;
-    padding-bottom: 5rem;
+    padding: 2rem 0 5rem;
+    margin-left: -4px;
+    margin-right: -4px;
 }
 
 #rocket .view-display-id-categories .col-md-6,
